# zcolorizer

./: .gitmodules  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
docs/: hud-theme.js  index.html  report.html
src/: color.rs  config.rs  engine.rs  error.rs  lib.rs  modules.rs  modules_modern.rs  novelty.rs  rules.rs  theme.rs
tests/: integration.rs
